Update domain to strategyrainbow.com
- Update all meta tags with new domain URL
- Update README with new live demo URL
- Change Open Graph and Twitter Card URLs for proper social previews

--- a/index.html
+++ b/index.html
@@ -11,23 +11,23 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://posix4e.github.io/btc-mnav-rainbow/">
+    <meta property="og:url" content="https://strategyrainbow.com/">
     <meta property="og:title" content="BTC MNAV Rainbow Chart - Interactive MicroStrategy Premium Calculator">
     <meta property="og:description" content="Visualize Bitcoin's rainbow bands alongside MicroStrategy's MNAV premium. Interactive calculator shows how debt and preferred stock affect the true enterprise value ratio.">
-    <meta property="og:image" content="https://posix4e.github.io/btc-mnav-rainbow/preview.png">
+    <meta property="og:image" content="https://strategyrainbow.com/preview.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://posix4e.github.io/btc-mnav-rainbow/">
+    <meta property="twitter:url" content="https://strategyrainbow.com/">
     <meta property="twitter:title" content="BTC MNAV Rainbow Chart">
     <meta property="twitter:description" content="Interactive chart comparing Bitcoin spot price to MicroStrategy's MNAV-adjusted price with component toggles">
-    <meta property="twitter:image" content="https://posix4e.github.io/btc-mnav-rainbow/preview.png">
+    <meta property="twitter:image" content="https://strategyrainbow.com/preview.png">
 
     <!-- Additional SEO -->
     <meta name="keywords" content="Bitcoin, MSTR, MicroStrategy, MNAV, Rainbow Chart, BTC, Cryptocurrency, Michael Saylor">
     <meta name="author" content="posix4e">
     <meta name="robots" content="index, follow">
-    <link rel="canonical" href="https://posix4e.github.io/btc-mnav-rainbow/">
+    <link rel="canonical" href="https://strategyrainbow.com/">
 
     <link rel="stylesheet" href="styles.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"></script>
